# rf-detr-cpp

./: .gitignore  CMakeLists.txt  README.md
demos/: train_step_demo.cpp
docs/: architecture.md
docs/decisions/: 0001-open-work.md  0002-position-embed-bicubic.md  0003-training.md  0004-formal-verification.md  backbone-windowing.md  decoder.md  keypoints.md  segmentation.md
formal/rfdetr_proofs/: README.md  RfdetrProofs.lean  lake-manifest.json  lakefile.toml
formal/rfdetr_proofs/RfdetrProofs/: Basic.lean
gen_reference/: gen_coco_dataset.py  gen_reference_backbone.py  gen_reference_decoder.py  gen_reference_deform_attn.py  gen_reference_deform_attn_multilevel.py  gen_reference_keypoints.py  gen_reference_loss.py  gen_reference_projector.py  gen_reference_projector_multiscale.py  gen_reference_real_image.py  gen_reference_segmentation.py
scripts/: convert_decoder_to_gguf.py  convert_dinov2_to_gguf.py  convert_keypoints_to_gguf.py  convert_projector_to_gguf.py  convert_segmentation_to_gguf.py
src/: backbone.cpp  backbone.h  dataset.cpp  dataset.h  decoder.cpp  decoder.h  deform_attn.cpp  deform_attn.h  keypoints.cpp  keypoints.h  loss.cpp  loss.h  ops.cpp  ops.h  projector.cpp  projector.h  segmentation.cpp  segmentation.h
tests/: test_backbone.cpp  test_backbone_base.cpp  test_backbone_multi_image.cpp  test_backbone_smoke.cpp  test_common.h  test_decoder.cpp  test_decoder_base.cpp  test_decoder_large.cpp  test_decoder_large_deprecated.cpp  test_decoder_medium.cpp  test_decoder_small.cpp  test_deform_attn.cpp  test_deform_attn_backward.cpp  test_deform_attn_multilevel.cpp  test_keypoints.cpp  test_loss.cpp  test_norm_backward.cpp  test_projector.cpp  test_projector_multiscale.cpp  test_segmentation.cpp  test_segmentation_large.cpp  test_segmentation_medium.cpp  test_segmentation_preview.cpp  test_segmentation_small.cpp  test_segmentation_xlarge.cpp
